[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Components/Decoration/Boat/BoatAnimManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Components/Panels/MainMenu/MainMenuUiManager.gd" type="Script" id=13]
[ext_resource path="res://UI/MainManuUi/PlayMenu/AddPlayers/AddPlayerPanel.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/MainManuUi/DeckMenu/CardEditorMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/Components/Buttons/MenuButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/Components/Buttons/OptionsButton.tscn" type="PackedScene" id=22]

[node name="MainMenu" type="Panel"]
margin_right = 1080.0
margin_bottom = 1920.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoatAnimManager" parent="." instance=ExtResource( 1 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="PlayButton" parent="." instance=ExtResource( 16 )]
margin_left = 355.0
margin_top = 500.0
margin_right = 725.0
margin_bottom = 686.0
text = "Play"
s_func_to_bind = "play_button"

[node name="DeckButton" parent="." instance=ExtResource( 16 )]
margin_left = 355.0
margin_top = 700.0
margin_right = 725.0
margin_bottom = 886.0
text = "Deck"
s_func_to_bind = "deck_button"

[node name="DonateButton" parent="." instance=ExtResource( 16 )]
margin_left = 355.0
margin_top = 900.0
margin_right = 725.0
margin_bottom = 1086.0

[node name="OptionsButton" parent="." instance=ExtResource( 22 )]
margin_left = 478.0
margin_top = 1100.0
margin_right = 622.0
margin_bottom = 1224.0

[node name="MenuContainer" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPlayerPanel" parent="MenuContainer" instance=ExtResource( 14 )]
visible = false

[node name="CardEditorMenu" parent="MenuContainer" instance=ExtResource( 15 )]
visible = false
